Update image, github, and product details page

--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -49,7 +49,7 @@
               <ul>
                 <li><strong>Project Title</strong>: JobBusiness (Android Mobile Application for Local Private Sector Job
                   Listings and Small Business Advertising)<br></li>
-                <li><strong>Author and Developer</strong>: Hifdzullah Matali</li>
+                <li><strong>Developer</strong>: Hifdzullah Matali</li>
                 <li><strong>Year developed</strong>: 2019</li>
                 <li><strong>Developed using</strong>: Java, XML, Firebase</li>
                 <li><strong>Project Github</strong>:<a href="https://github.com/Hifdzullah/Job_Business.git"
