--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -38,20 +38,20 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-8">
-            <img src="./assets/img/RescueMe.png" alt="RescueMe registration form" style="width: 700px;">
+            <img src="./assets/img/RescueMepng.png" alt="RescueMe registration form" style="width: 700px;">
           </div>
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
                 <li><strong>Project Title</strong>: Rescue Me (A responsive web application for rescueing stray animals and finding lost animals)</li>
-                <li><strong>Author and Developer</strong>: Hifdzullah Matali</li>
+                <li><strong>Developer</strong>: Hifdzullah Matali</li>
                 <li><strong>Year developed</strong>: 2023</li>
                 <li><strong>Development status</strong>:In progress</li>
                 <li><strong>Developed using</strong>: HTML5, CSS3, JavaScript, Nodejs and SQL</li>
                 <li><strong>Implemented functions</strong>: Registration and Login Function</li>
                 <li><strong>Project Github</strong>: <a
-                    href="https://github.com/Hifdzullah/rescueanimal.git" target=" ">Click
+                    href="https://github.com/Hifdzullah/Profile-page.git" target=" ">Click
                     Here</a></li>
               </ul>
             </div>
