--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -51,7 +51,7 @@
                   One-Time-Password with
                   Anchoring and Relay techniques for Enhanced Password Security
                   and Memorability for Web-Based Online Banking User Authentication</li>
-                <li><strong>Author and Developer</strong>: Hifdzullah Matali</li>
+                <li><strong>Developer</strong>: Hifdzullah Matali</li>
                 <li><strong>Year developed</strong>: 2022</li>
                 <li><strong>Developed using</strong>: PHP, HTML5, CSS3, JavaScript, and SQL</li>
                 <li><strong>Project Github</strong>: <a
