Update portfolio images

--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -44,7 +44,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Project Title</strong>: Rescue Me (A responsive web application for rescueing stray animals and finding lost animals)</li>
+                <li><strong>Project Title</strong>: Rescue Me (A web-based application for rescueing stray animals and finding lost animals)</li>
                 <li><strong>Developer</strong>: Hifdzullah Matali</li>
                 <li><strong>Year developed</strong>: 2023</li>
                 <li><strong>Development status</strong>:In progress</li>
