update profile details 2 contents

--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -70,7 +70,7 @@
           <div class="mx-md-auto">
             <p class="p-about-me">
             <p>
-              This project is developed by the author to provide the public fulcrum of information and updates regarding
+              This project is developed by the author to provides the public information and updates regarding
               to job listings from private sectors and small business product advertisment.
               The purpose of this mobile application is to give more opportunities for jobseekers to find job listings
               within private sector and opporutnities for small businesses to advertise their products.
