update index.html content

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <div class="portfolio-img"><img src="assets/img/RescueMe.png" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <h4>Web application (2023)</h4>
-              <p>Rescue Me</p>
+              <p>Rescue Me (Personal Project)</p>
               <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details-3.html" class="details-link" title="More Details">
