update video for portfolio no 3

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           <li class="Port"><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
           <li class="Contact"><a class="nav-link scrollto" href="#contact-me">Contact Me</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle" style="font-size: 19px; text-align: center; line-height: 15px;">Sorry, his webpage does not support responsive design</i>
+        <i class="bi bi-list mobile-nav-toggle" style="font-size: 19px; text-align: center; line-height: 15px;">Sorry, this webpage does not support responsive design</i>
         
       </nav>
       <!-- End: navbar -->
