--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -55,7 +55,7 @@
                 <li><strong>Developed using</strong>: HTML5, CSS3, JavaScript, Nodejs and SQL</li>
                 <li><strong>Implemented functions</strong>: Registration and Login Function</li>
                 <li><strong>Project Github</strong>: <a
-                    href="https://github.com/Hifdzullah/Profile-page.git" target=" ">Click
+                    href="https://github.com/Hifdzullah/RescueMe.git" target=" ">Click
                     Here</a></li>
               </ul>
             </div>
