Update index.html and portfolio detail 3

--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -53,7 +53,7 @@
                 <li><strong>Year developed</strong>: 2023</li>
                 <li><strong>Development status</strong>:In progress</li>
                 <li><strong>Developed using</strong>: HTML5, CSS3, JavaScript, Nodejs and SQL</li>
-                <li><strong>Implemented functions</strong>: Registration and Login Function</li>
+                <li><strong>Implemented functions</strong>: Registration and Login/li>
                 <li><strong>Project Github</strong>: <a
                     href="https://github.com/Hifdzullah/RescueMe.git" target=" ">Click
                     Here</a></li>
