--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
               new ideas, solving
               research problems by applying my programming skills which I had developed an enhanced graphical user
               authentication that is less on cognitive burden for my final project in 2022 and android
-              application for small business products advertising and
-              private sector job posting for my final year project in 2019.
-              All of my projects majority involved using PHP, Java, HTML, CSS and SQL.
+              application for freelancer and small business advertising, and
+              private sector job posting for my final year project in 2020.
+              All of my projects majority involved using PHP, Java, JavaScript, HTML, CSS and SQL.
             </p>
             <p class="p-about-me">
               I am currently upskilling to be a full-stack developer trained in Coding. bn under AITI, where I have
@@ -303,10 +303,10 @@
 
           <div class="col-lg-6 pt-4 pt-lg-15 content">
             <div class="skills-content">
-              <span class="skill"><strong>Java</strong> (Used in most of my android mobile based project)<i class="val" style="float:right">30%</i></span>
+              <span class="skill"><strong>Java</strong> (Used in most of my android mobile based project)<i class="val" style="float:right">25%</i></span>
               <div class="progress">
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" style="width: 30%;">
+                  <div class="progress-bar" style="width: 25%;">
                   </div>
                 </div>
               </div>
